--- a/CadastroTOS/src/Global.css
+++ b/CadastroTOS/src/Global.css
@@ -3,5 +3,7 @@
 @tailwind utilities;
 
 body {
-    @apply bg-[#181818] text-zinc-100
+    @apply bg-[#181818] text-zinc-100;
+    font-family: 'Roboto';
+    font-weight: 400;
 }
